ProfileSyncService: Notify of OnSyncConfigurationCompleted only on success

On a configuration failure, PSS is temporarily in an inconsistent state
until the error is processed (by calling OnUnrecoverableErrorImpl). If we
call an observer during that time, and the observer calls
PSS::GetTransportState, then that could trigger a DCHECK.

It's arguable whether calling OnSyncConfigurationCompleted on an error
even makes sense. It looks like none of the clients can do anything useful
in that case anyway. So let's just not call them. If they're interested in
the error, then they should listen for OnStateChanged instead.

Bug: 880080
Change-Id: If4179cd530f3e625bd53de466c059e051b36f42d
Reviewed-on: https://chromium-review.googlesource.com/1210083
Reviewed-by: Mikel Astiz <mastiz@chromium.org>
Commit-Queue: Marc Treib <treib@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589869}